[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/GorgeousPixel-BWO85.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Theme/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Theme/label_bg_atlas.tres" type="Texture" id=3]
[ext_resource path="res://Scripts/TeamBuilder.gd" type="Script" id=4]
[ext_resource path="res://Scenes/ActorIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Theme/panel.tres" type="StyleBox" id=6]
[ext_resource path="res://Theme/panel2.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 88
extra_spacing_char = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="TeamBuilder" type="PanelContainer"]
margin_left = 136.0
margin_top = 74.0
margin_right = 1813.0
margin_bottom = 1009.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
script = ExtResource( 4 )
char_file_path = "res://json/Characters.json"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1677.0
margin_bottom = 935.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1677.0
margin_bottom = 155.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_right = 1477.0
margin_bottom = 155.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/TextureRect"]
margin_right = 1263.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/margin_top = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TextureRect/MarginContainer"]
margin_top = 40.0
margin_right = 1263.0
margin_bottom = 148.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "BUILD YOUR TEAM"
align = 1
autowrap = true
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 159.0
margin_right = 1677.0
margin_bottom = 935.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 1360.0
margin_bottom = 776.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.35
custom_constants/margin_right = 20
custom_constants/margin_top = 40
custom_constants/margin_left = 120
custom_constants/margin_bottom = 35

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
margin_left = 120.0
margin_top = 40.0
margin_right = 1340.0
margin_bottom = 741.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
tab_align = 0

[node name="Characters" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 68.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters"]
margin_right = 1220.0
margin_bottom = 633.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer"]
margin_right = 739.0
margin_bottom = 633.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.55
custom_constants/margin_right = 60
custom_constants/margin_top = 60
custom_constants/margin_left = 60
custom_constants/margin_bottom = 60

[node name="ItemList" type="GridContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer"]
margin_left = 60.0
margin_top = 60.0
margin_right = 679.0
margin_bottom = 573.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 120
custom_constants/hseparation = 145
columns = 5

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer"]
margin_left = 743.0
margin_right = 1220.0
margin_bottom = 633.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 75
custom_constants/margin_top = 50
custom_constants/margin_left = 75
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer2"]
margin_left = 75.0
margin_top = 50.0
margin_right = 402.0
margin_bottom = 583.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 327.0
margin_bottom = 429.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.31
custom_constants/margin_right = 30
custom_constants/margin_top = 60
custom_constants/margin_left = 30
custom_constants/margin_bottom = 120

[node name="CurrentSelection" type="PanelContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 60.0
margin_right = 297.0
margin_bottom = 309.0
mouse_filter = 1
custom_styles/panel = ExtResource( 7 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 170.0
margin_right = 297.0
margin_bottom = 198.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 433.0
margin_right = 327.0
margin_bottom = 533.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer/Characters/HBoxContainer/MarginContainer2/VBoxContainer/MarginContainer2"]
margin_right = 327.0
margin_bottom = 100.0
mouse_filter = 1
text = "ADD TO TEAM !"

[node name="Objects" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer2/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 68.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1364.0
margin_right = 1677.0
margin_bottom = 776.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 106
custom_constants/margin_left = 20
custom_constants/margin_bottom = 40

[node name="Panel" type="PanelContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 106.0
margin_right = 273.0
margin_bottom = 736.0
mouse_filter = 2
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/Panel"]
margin_right = 253.0
margin_bottom = 630.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 110

[node name="ActorIcon" parent="VBoxContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 28.0

[node name="ActorIcon2" parent="VBoxContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 138.0
margin_right = 0.0
margin_bottom = 166.0

[node name="ActorIcon3" parent="VBoxContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 276.0
margin_right = 0.0
margin_bottom = 304.0

[node name="ActorIcon4" parent="VBoxContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 414.0
margin_right = 0.0
margin_bottom = 442.0
